# TemplateTypeDeduction

./: CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
